--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,2 +1,3 @@
 $primary-font: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 $font-size-header: 20px;
+$font-size-header-mobile: 10px;
